--- a/src/app.css
+++ b/src/app.css
@@ -1,119 +1,180 @@
- :root {
-   font-family: Roboto, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-   line-height: 1.5;
-   font-weight: 400;
+:root {
+  font-family: Roboto, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
 
-   color-scheme: light dark;
-   color: rgba(255, 255, 255, 0.87);
-   background-color: #242424;
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
 
-   font-synthesis: none;
-   text-rendering: optimizeLegibility;
-   -webkit-font-smoothing: antialiased;
-   -moz-osx-font-smoothing: grayscale;
- }
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
- a {
-   font-weight: 500;
-   color: #646cff;
-   text-decoration: inherit;
- }
+.prata-regular {
+  font-family: "Prata", serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
- a:hover {
-   color: #535bf2;
- }
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
 
- h1 {
-   font-size: 3.2em;
-   line-height: 1.1;
- }
+a:hover {
+  color: #535bf2;
+}
 
- .card {
-   padding: 2em;
- }
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
 
+.card {
+  padding: 2em;
+}
 
- button {
-   border-radius: 8px;
-   border: 1px solid transparent;
-   padding: 0.6em 1.2em;
-   font-size: 1em;
-   font-weight: 500;
-   font-family: inherit;
-   background-color: #1a1a1a;
-   cursor: pointer;
-   transition: border-color 0.25s;
- }
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  /* transition: border-color 0.25s; */
+}
 
- button:hover {
-   border-color: #646cff;
- }
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+}
 
- button:focus,
- button:focus-visible {
-   outline: 4px auto -webkit-focus-ring-color;
- }
+.centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
- @media (prefers-color-scheme: light) {
-   :root {
-     color: #213547;
-     background-color: #ffffff;
-   }
+.hero-button {
+  background-color: transparent;
+  border: 2px solid black;
+  color: black;
+  padding: 12px 24px;
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  overflow: hidden;
+  z-index: 1000;
+  height: 65px;
+}
 
-   a:hover {
-     color: #747bff;
-   }
+.hero-button:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  transition: all 0.3s ease;
+  z-index: -1;
+}
 
-   button {
-     background-color: #f9f9f9;
-   }
- }
+.hero-button:hover {
+  color: #000000;
+}
 
- .centered {
-   display: flex;
-   justify-content: center;
-   align-items: center;
- }
+.hero-button:hover:before {
+  left: 0;
+}
 
- .hero-button {
-   background-color: transparent;
-   border: 2px solid black;
-   color: black;
-   padding: 12px 24px;
-   font-size: 16px;
-   font-weight: 600;
-   text-transform: uppercase;
-   letter-spacing: 1px;
-   cursor: pointer;
-   transition: all 0.3s ease;
-   position: relative;
-   overflow: hidden;
-   z-index: 1000;
- }
-
- .hero-button:before {
-   content: "";
-   position: absolute;
-   top: 0;
-   left: -100%;
-   width: 100%;
-   height: 100%;
-   background-color: #ffffff;
-   transition: all 0.3s ease;
-   z-index: -1;
- }
-
- .hero-button:hover {
-   color: #000000;
- }
-
- .hero-button:hover:before {
-   left: 0;
- }
-
- */
+*/
 
  /* Optional: Add a box shadow on hover for more depth */
  .hero-button:hover {
-   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
- }
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.roboto-thin {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.roboto-light {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.roboto-regular {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.roboto-medium {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.roboto-bold {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.roboto-black {
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.roboto-thin-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: italic;
+}
+
+.roboto-light-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.roboto-regular-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.roboto-medium-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.roboto-bold-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.roboto-black-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  font-style: italic;
+}
