--- a/src/app.css
+++ b/src/app.css
@@ -24,7 +24,7 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  max-width: 100vw;
+  width: 100vw;
 }
 
 * {
@@ -98,12 +98,14 @@ button {
   width: 100%;
   height: 100%;
   background-color: #ffffff;
-  transition: all 0.3s ease;
+  transition: all 0.5s ease;
   z-index: -1;
+  opacity: 0.4;
 }
 
 .hero-button:hover {
   color: #000000;
+  background-color: rgb(211, 211, 211);
 }
 
 .hero-button:hover:before {
