--- a/src/app.css
+++ b/src/app.css
@@ -33,6 +33,11 @@ body {
   box-sizing: border-box;
 }
 
+p {
+  line-height: 1.5;
+  font-size: 16px;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
